# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  coursework.odt  main.cpp
lib/: CMakeLists.txt
lib/camera/: CMakeLists.txt  camera.h
lib/color/: CMakeLists.txt  color.h
lib/common/: CMakeLists.txt  common.h
lib/hittable/: CMakeLists.txt  hittable.h
lib/hittable_list/: CMakeLists.txt  hittable_list.h
lib/interval/: CMakeLists.txt  interval.h
lib/material/: CMakeLists.txt  material.h
lib/objects/: CMakeLists.txt  portal.h  sphere.h
lib/ray/: CMakeLists.txt  ray.h
lib/rtweekend/: CMakeLists.txt  rtweekend.h
lib/vec3/: CMakeLists.txt  vec3.h
